# server-gstreamer

./: CMakeLists.txt  README.md  gst_server.cpp  gst_server.h  main.cpp
